<resources>
    <!--  Aplikasi  -->
    <string name="app_name">FaceVoting V.1.0</string>
    <string name="logo_app">Logo FaceVoting</string>
    <!--  SplashActivity  -->
    <string name="splash1">START</string>
    <!--  PreLogin1  -->
    <string name="pre1">FaceVoting</string>
    <string name="pre2">Gambar Prelogin</string>
    <string name="pre3">Pilih Kandidatmu !</string>
    <string name="pre4">Aplikasi Evoting untuk melakukan pemilihan atau voting secara daring !</string>
    <string name="pre5">Tombol Mulai Sekarang</string>
    <!--  Login  -->
    <string name="login1">Email</string>
    <string name="login2">Gambar tombol login</string>
    <string name="login3">Password</string>
    <string name="login4">Gambar logo login</string>
    <string name="login5">Anda belum memiliki Akun ? <b>Daftar</b></string>
    <string name="login6">LOGIN</string>
    <!--  Daftar  -->
    <string name="daftar1">Nama Lengkap</string>
    <string name="daftar2">NIK/KTP/SIM/PASPPORT</string>
    <string name="daftar3">Pilih Pemilu</string>
    <string name="daftar4">Anda sudah memiliki Akun ? <b>Login</b></string>
    <string name="daftar5">BUAT AKUN</string>
    <!--  Bottom Menu  -->
    <string name="btmenu1">Home</string>
    <string name="btmenu2">Vote</string>
    <string name="btmenu3">Hasil</string>
    <string name="btmenu4">Akun</string>
    <!--  Checkpoint  -->
    <string name="checkp1">TERIMAKASIH TELAH MENDAFTAR</string>
    <string name="checkp2">Gambar Berhasil</string>
    <string name="checkp3">DATA ANDA SEDANG DIPROSES</string>
    <string name="checkp4">MOHON MENUNGGU VERIFIKASI AKUN ANDA</string>
    <string name="checkp5">UNTUK MELAKUKAN PENCOBLOSAN</string>
    <string name="checkp6">Tombol Lanjutkan</string>
    <!--  Dashboard  -->
    <string name="dashboard1">Selamat Datang di FaceVoting</string>
    <string name="dashboard2">George Cloney</string>
    <string name="dashboard3">ID123456879</string>
    <string name="dashboard4">UKM DARMAJAYA</string>
    <string name="dashboard5">VOTE</string>
    <!--  Daftar Paslon  -->
    <string name="dpaslon1">PASLON 1</string>
    <string name="dpaslon2">CALON KETUA</string>
    <string name="dpaslon3">CALON WAKIL</string>
    <string name="dpaslon4">Nama Paslon</string>
    <string name="dpaslon5">Gambar Photo</string>
    <string name="dpaslon6">VISI DAN MISI</string>
    <string name="dpaslon7">-</string>
    <string name="dpaslon8">PROFIL PASLON</string>
    <string name="dpaslon9">COBLOS</string>

    <!--  Validiasi  -->
    <string name="validasi1">REKAM PHOTO</string>
    <string name="validasi2">CEK VALIDASI</string>
    <string name="validasi3">GUNAKAN GAMBAR INI</string>
    <string name="validasi4">BACK</string>
    <string name="validasi5">SELAMAT ANDA BERHASIL VALIDASI</string>

    <!--  akun  -->
    <string name="akun1">Email</string>
    <string name="akun2">Nama Lengkap</string>
    <string name="akun3">Identitas ktp/sim/passport</string>
    <string name="akun4">Password</string>
    <string name="akun5">Update</string>
    <string name="akun6">Logout</string>

    <!--  Vote  -->
    <string name="vote1">gambar logo</string>




    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>