<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Checkpoint">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logosmall"
        android:contentDescription="@string/logo_app"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"/>

    <ImageView
        android:id="@+id/check"
        android:layout_below="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/checkp2"
        android:layout_marginTop="80dp"
        android:src="@drawable/right" />

    <TextView
        android:id="@+id/thanks"
        android:layout_below="@+id/check"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:text="@string/checkp1"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/proses"
        android:layout_below="@+id/thanks"
        android:layout_marginTop="30dp"
        android:text="@string/checkp3"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/mohon"
        android:layout_below="@+id/proses"
        android:layout_marginTop="5dp"
        android:text="@string/checkp4"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/coblos"
        android:layout_below="@+id/mohon"
        android:layout_marginTop="5dp"
        android:text="@string/checkp5"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>
    <ImageView
        android:id="@+id/btnLanjutkan"
        android:layout_below="@+id/coblos"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:contentDescription="@string/checkp6"
        android:src="@drawable/tombol_lanjut"/>
    <ImageView
        android:id="@+id/btnRekam"
        android:layout_below="@+id/btnLanjutkan"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:contentDescription="@string/checkp6"
        android:src="@drawable/btn_rekam_wajah"/>

</RelativeLayout>