<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ui.preLogin1">

    <ImageView
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo_app"
        android:src="@drawable/logosmall"/>
    <ImageView
        android:id="@+id/gambar_tengah"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/pre2"
        android:src="@drawable/pre1"/>
    <TextView
        android:id="@+id/pilih_kandidat"
        android:layout_below="@+id/gambar_tengah"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pre3"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/text_kandidat"
        android:layout_below="@+id/pilih_kandidat"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/pre4"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="14sp"/>
    <ImageView
        android:id="@+id/btn_mulai"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/text_kandidat"
        android:contentDescription="@string/pre5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/tombol_mulai"/>



</RelativeLayout>