<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:background="@drawable/customborder"
    android:layout_width="150dp"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/logo_ukm"
        android:src="@drawable/logosmall"
        android:contentDescription="@string/logo_app"
        android:layout_gravity="center_horizontal"
        android:layout_width="100dp"
        android:layout_height="100dp"/>
    <TextView
        android:id="@+id/txtJudul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:text="@string/dashboard4"
        android:layout_gravity="center_horizontal"/>
    <Button
        android:id="@+id/tbl_vote"
        android:layout_gravity="center_horizontal"
        android:background="@color/merahMaroon"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/dashboard5"/>

</LinearLayout>