<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.validasi">
    <ImageView
        android:id="@+id/photo"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/app_name"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/btnRekam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/validasi1"/>
    <Button
        android:id="@+id/btnCek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/validasi2"/>


</LinearLayout>