<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_bg"
    tools:context=".ui.Login">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/login4"
        android:src="@drawable/logo1"/>

    <RelativeLayout
        android:id="@+id/layout_form"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/form_login_bg"
        android:orientation="vertical">
        <EditText
            android:id="@+id/ed_email"
            android:layout_marginTop="75dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/login1"
            android:autofillHints="@string/login1"
            android:textColor="@color/darkGrey"
            android:backgroundTint="@color/darkGrey"
            android:textColorHint="@color/darkGrey"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/ed_password"
            android:layout_below="@+id/ed_email"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp"
            android:hint="@string/login3"
            android:textColor="@color/darkGrey"
            android:backgroundTint="@color/darkGrey"
            android:autofillHints="@string/login3"
            android:textColorHint="@color/darkGrey"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <ImageView
            android:layout_width="85dp"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="-26dp"
            android:contentDescription="@string/login2"
            android:src="@drawable/tombol_login" />
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_form"
        android:textColor="@color/darkGrey"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/login5"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="50dp"/>
</RelativeLayout>