<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/grey"
    tools:context=".fragment.akun_fragment">
    <androidx.cardview.widget.CardView
        android:id="@+id/layoutForm"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="80dp"
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        app:cardCornerRadius="10dp"
        android:elevation="10dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <EditText
                android:id="@+id/txtEmail"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/akun1"
                android:autofillHints="@string/akun1"/>
            <EditText
                android:id="@+id/txtNama"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/akun2"
                android:autofillHints="@string/akun2"/>
            <EditText
                android:id="@+id/txtIdentitas"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/akun3"
                android:autofillHints="@string/akun3"/>
            <EditText
                android:id="@+id/txtPassword"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/akun4"
                android:autofillHints="@string/akun4"/>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnEdit"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/bgUtama"
                    android:text="@string/akun5"
                    android:textColor="@color/white"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLogout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/merahMaroon"
                    android:text="@string/akun6"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>