<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey"
    tools:context=".ui.Detailpaslon">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarmenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bgUtama"
            android:minHeight="?attr/actionBarSize"
            app:theme="@style/ThemeNoActionBar"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>
    <!--  Kotak Gambar profil      -->
    <androidx.cardview.widget.CardView
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="3dp"
        app:cardElevation="2dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!--  Gambar profil      -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txt_judul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dpaslon1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"/>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal"
                android:baselineAligned="false">
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dpaslon2"
                        android:layout_gravity="center_horizontal"
                        android:textStyle="bold"
                        android:textSize="16sp"/>
                    <ImageView
                        android:id="@+id/gbr_ketua"
                        android:contentDescription="@string/dpaslon5"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/profil"/>
                    <TextView
                        android:id="@+id/txt_ketua"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dpaslon4"
                        android:layout_gravity="center_horizontal"
                        android:textStyle="bold"
                        android:textSize="12sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dpaslon3"
                        android:layout_gravity="center_horizontal"
                        android:textStyle="bold"
                        android:textSize="16sp"/>

                    <ImageView
                        android:id="@+id/gbr_wakil"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/dpaslon5"
                        android:src="@drawable/profil" />

                    <TextView
                        android:id="@+id/txt_wakil"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dpaslon4"
                        android:layout_gravity="center_horizontal"
                        android:textStyle="bold"
                        android:textSize="12sp"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <!--  /End Gambar profil      -->


    </androidx.cardview.widget.CardView>
    <!--  /End Kotak Gambar profil  -->
    <!--  Kotak Visi dan Misi     -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dpaslon6"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/txt_visimisi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dpaslon7"
            android:textSize="16sp"
            android:gravity="center_horizontal"/>
    </androidx.cardview.widget.CardView>

    <!-- /End  Kotak Visi dan Misi     -->
    <!--  Profil Paslon     -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dpaslon8"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/txt_profil_ketua"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dpaslon7"
                android:textSize="16sp"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/txt_profil_wakil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dpaslon7"
                android:textSize="16sp"
                android:gravity="center_horizontal"/>
        </LinearLayout>


    </androidx.cardview.widget.CardView>
    <!--  /End Profil Paslon     -->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/dpaslon9"
        android:textColor="@color/white"
        android:background="@drawable/mybutton"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>