<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.home_fragment">
        <LinearLayout
            android:background="@drawable/header_bg"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="100dp">
            <ImageView
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/logo_app"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/logosmall"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:text="@string/dashboard1"
                    android:textAlignment="textEnd"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/txtNama"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:text="@string/dashboard2"
                    android:textAlignment="textEnd"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/txtIdentitas"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:text="@string/dashboard3"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>
    <!--  Baris Kedua setelah profil  -->


            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/refresh"
                android:layout_marginTop="150dp"
                android:layout_marginBottom="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rcMenu"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            />
                    </ScrollView>
                </LinearLayout>
            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>



</FrameLayout>